@@ -42,7 +42,7 @@ struct	contextStruct
 	unsigned	id;
 };
 
-enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTBMNEW,CONTEXTOPEN,CONTEXTDELETE,CONTEXTDUP,CONTEXTEXTRACT,CONTEXTCOPY,CONTEXTPASTE,CONTEXTDISKMOUNT,CONTEXTDISKUNMOUNT,CONTEXTDISKEJECT,CONTEXTBMOPEN,CONTEXTBMDELETE,MAINFILENEW,MAINFILETERMINAL,MAINFILEPREFS,MAINFILEQUIT,MAINHELPABOUT};
+enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTBMNEW,CONTEXTOPEN,CONTEXTDELETE,CONTEXTDUP,CONTEXTEXTRACT,CONTEXTCOPY,CONTEXTPASTE,CONTEXTDISKMOUNT,CONTEXTDISKUNMOUNT,CONTEXTDISKEJECT,CONTEXTBMOPEN,CONTEXTBMDELETE,MAINFILENEW,MAINFILETERMINAL,MAINFILEPREFS,MAINFILEQUIT,MAINHELPABOUT,MAINTOOLSBLANKTOOL};
 
 extern	menuDataStruct	menuData[];
 extern	contextStruct	**contextMenus;
