@@ -1,4 +1,5 @@
 0.0.4
+Started to add external tools.
 Updated icon.
 Set default widget on new filename dialog.
 Done 'Paste'.
